--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Sea</title>
   <base href="/">
- <link rel="stylesheet" href="http://bootswatch.com/flatly/bootstrap.min.css">"
+ <link rel="stylesheet" href="http://bootswatch.com/flatly/bootstrap.min.css">
  <link media="all" type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation-flex.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
